--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 <style>
 
 
-
+body{
+    color: white;
+}
 
 
     @font-face {
@@ -129,7 +131,7 @@
 
 
 
-    const myTimeout = setTimeout(myGreeting, 200);
+    const myTimeout = setTimeout(myGreeting, 50);
 
 
 
@@ -161,6 +163,7 @@
             text-align: center;
             margin-bottom: 100px;
             padding: 20px;
+            color:black ;
 
         }
         .titres{
@@ -168,9 +171,11 @@
            text-align: center;
            margin-bottom: 50px;
            margin-top: 50px;
+           color:black ;
         }
         .width_80{
             width:80%; 
             margin: auto;
+            color:black ;
         }
     </style>
